--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Backend & <span class="text-dark dark:text-white">Smart Contract</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Interested in the development of blockchain-based technology.</p>
 
-            <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
+            <a href="https://www.linkedin.com/in/rafly-nur-ramadhani-579297223/" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
